test/files/neg/t708.check
t708.scala:8: error: incompatible type in overriding
private[trait A] type S <: A.this.T (defined in trait X);
 found   : Any
 required:  <: A.this.T
    override private[A] type S = Any;
                             ^
one error found
